add folder branch

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -313,5 +313,6 @@
 
     <!-- Menu text for the item controlling the audio effects panel [CHAR LIMIT=15] -->
     <string name="effectspanel">Sound effects</string>
+    <string name="folder">Folder</string>
 </resources>
 
